# humanize-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ZH.md  draft.md
.claude-plugin/: marketplace.json  plugin.json
agents/: draft-relevance-checker.md  plan-compliance-checker.md
commands/: cancel-pr-loop.md  cancel-rlcr-loop.md  gen-draft.md  gen-plan.md  resume-pr-loop.md  resume-rlcr-loop.md  start-pr-loop.md  start-rlcr-loop.md
crates/cli/: Cargo.toml
crates/cli/assets/.claude-plugin/: marketplace.json  plugin.json
crates/cli/assets/claude/commands/: cancel-pr-loop.md
crates/cli/assets/claude/skills/humanize/: SKILL.md
crates/cli/assets/claude/skills/humanize-rlcr/: SKILL.md
crates/cli/assets/commands/: cancel-rlcr-loop.md
crates/cli/assets/hooks/: hooks.json
crates/cli/assets/prompt-template/block/: git-not-clean-humanize-local.md  git-push.md  plan-file-modified.md  schema-outdated.md
crates/cli/assets/prompt-template/claude/: next-round-footer.md
crates/cli/assets/skills/ask-codex/: SKILL.md
crates/cli/assets/skills/humanize/: SKILL.md
crates/cli/assets/skills/humanize-rlcr/: SKILL.md
crates/cli/src/: commands.rs  hook_input.rs  init.rs  main.rs
crates/cli/src/commands/: ask_codex.rs  config.rs  gate.rs  gen_draft.rs  gen_plan.rs  hook_validation.rs  lifecycle.rs  monitor.rs  planning.rs  pr.rs  setup.rs  stop.rs
crates/cli/tests/: cancel.rs  command_assets.rs  config.rs  droid_compat_assets.rs  embedded_assets.rs  gate.rs  gen_plan.rs  init.rs  install.rs  install_skills.rs  monitor.rs  resume.rs  setup_pr.rs  setup_rlcr.rs  skill_assets.rs  stop_pr.rs  stop_rlcr.rs
crates/core/: Cargo.toml
crates/core/src/: codex.rs  constants.rs  fs.rs  git.rs  hooks.rs  lib.rs  state.rs  template.rs
docs/: install-for-claude.md  install-for-codex.md  install-for-droid.md  install-for-kimi.md  plan.md  usage.md
hooks/: hooks.json
prompt-template/block/: git-not-clean-humanize-local.md  git-push.md  plan-file-modified.md  schema-outdated.md
prompt-template/claude/: next-round-footer.md
shims/: cancel-rlcr-loop.sh  hook-bash-validator.sh  hook-edit-validator.sh  hook-plan-file-validator.sh  hook-post-tool-use.sh  hook-read-validator.sh  hook-write-validator.sh  setup-rlcr-loop.sh
skills/ask-codex/: SKILL.md
skills/humanize/: SKILL.md
skills/humanize-gen-plan/: SKILL.md
skills/humanize-rlcr/: SKILL.md
testdata/mocks/: gh
xtask/: Cargo.toml
xtask/src/: main.rs
