[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "xtask",
]

[workspace.package]
version = "0.3.18"
edition = "2024"
rust-version = "1.85"
authors = ["Cupnfish <cupnfish@icloud.com>"]
license = "MIT"
repository = "https://github.com/Cupnfish/humanize-rs"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_borrow = "0.9"
serde_yaml = "0.9"
regex = "1.11"
sha2 = "0.10"
jsongrep = "0.7"

# CLI
clap = { version = "4.6", features = ["derive", "env", "string"] }
crossterm = "0.29"
ratatui = "0.30"
include_dir = "0.7"
dirs = "6.0"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
wait-timeout = "0.2"

# Testing
tempfile = "3.27"
toml_edit = "0.22"

# Internal crates
humanize-core = { package = "humanize-cli-core", path = "crates/core", version = "0.3.18" }
