[package]
name = "humanize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for the Humanize Claude Code plugin"

[[bin]]
name = "humanize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
humanize-core.workspace = true
