[package]
name = "humanize-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for the Humanize Claude Code plugin"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
# Testing utilities
tempfile.workspace = true
