[package]
name = "humanize-cli-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for the Humanize plugin workflows"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
# Testing utilities
tempfile.workspace = true
